new journal updates

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -30112,3 +30112,80 @@ note = {(Acc. 41\% of 2034)},
   Title =	 {Cooperative Mapping of Indoor Environments},
   Year =	 {2011}
 }
+
+
+@InProceedings{wolfe11:_bound_inten_plann,
+  author =	 {J. Wolfe and S. Russell},
+  title =	 {Bounded Intention Planning},
+  booktitle =	 {22nd IJCAI},
+  year =	 2011,
+  address =	 {Barcelona, ES},
+  month =	 {Jul}
+}
+
+@InProceedings{russell02:_ration_intel,
+  author =	 {S Russell},
+  title =	 {Rationality and Intelligence},
+  booktitle =	 {Common sense, reasoning and rationality},
+  year =	 2002,
+  editor =	 {R. Elio},
+  publisher =	 {Oxford University Press}
+}
+
+@Article{egozi13,
+  author =	 {A. Egozi and Y. Keller and H. Guterman},
+  title =	 {A probabilistic apporach to spectral graph matching},
+  journal =	 {{IEEE} Trans on {PAMI}},
+  year =	 2013,
+  volume =	 35,
+  number =	 1,
+  pages =	 {18--27},
+  month =	 {Jan}
+}
+
+@Article{vondrak13:_dynam_simul_prior_human_motion_track,
+  author =	 {M. Vondrak and L. Sigal and O. C. Jenkins},
+  title =	 {Dynamical Simulation Priors for Human Motion
+                  Tracking},
+  journal =	 {{IEEE} Trans on {PAMI}},
+  year =	 2013,
+  volume =	 35,
+  number =	 1,
+  pages =	 {52--65},
+  month =	 {Jan}
+}
+
+@Article{borji13:_state_art_visual_atten_model,
+  author =	 {A. Borji and L. Itti},
+  title =	 {State-of-the-Art in Visual Attention Modeling},
+  journal =	 {{IEEE} Trans on {PAMI}},
+  year =	 2013,
+  volume =	 35,
+  number =	 1,
+  pages =	 {185--207},
+  month =	 {Jan}
+}
+
+@article{Vasudenvan:vn,
+  author =	 {Vasudenvan, S},
+  title =	 {{Data Fusion with Gaussian processes}},
+  journal =	 {Robotics and Autonomous Systems},
+  volume =	 {60},
+  number =	 {12},
+  pages =	 {1528--1544}
+}
+
+@Book{martinoli12:_distr_auton_robot_system_inter_sympos,
+  editor =	 {A. Martinoli and F. Mondada and N. Correll and
+                  G. Mermoud and M. Egerstedt and M. Ani Hsieh and
+                  L. Parker and K. St{\o}y},
+  title =	 {Distributed {A}utonomous {R}obotic {S}ystems - {T}he
+                  10th {I}nternational {S}ymposium},
+  publisher =	 {Springer Verlag},
+  year =	 2012,
+  volume =	 83,
+  series =	 {STAR},
+  address =	 {Berlin/Heidelberg},
+  month =	 {Dec}
+}
+
