--- a/bib-file.bib
+++ b/bib-file.bib
@@ -89551,3 +89551,46 @@
   month =	 {Oct}
 }
 
+@article{mmdetection,
+  title =	 {{MMDetection}: Open MMLab Detection Toolbox and
+                  Benchmark},
+  author =	 {Chen, Kai and Wang, Jiaqi and Pang, Jiangmiao and
+                  Cao, Yuhang and Xiong, Yu and Li, Xiaoxiao and Sun,
+                  Shuyang and Feng, Wansen and Liu, Ziwei and Xu,
+                  Jiarui and Zhang, Zheng and Cheng, Dazhi and Zhu,
+                  Chenchen and Cheng, Tianheng and Zhao, Qijie and Li,
+                  Buyu and Lu, Xin and Zhu, Rui and Wu, Yue and Dai,
+                  Jifeng and Wang, Jingdong and Shi, Jianping and
+                  Ouyang, Wanli and Loy, Chen Change and Lin, Dahua},
+  journal =	 {arXiv preprint arXiv:1906.07155},
+  year =	 {2019}
+}
+
+@InProceedings{paz20:metrics,
+  author =	 {David Paz and Po-Jung Lai and Nathan Chan and Yuqing
+                  Jianf and Henrik I Christensen},
+  title =	 {Autonomous Vehicle Benchmarking Using Unbiased
+                  Metrics},
+  booktitle =	 {Internaitonal Conference on Intelligent Robots and
+                  Systems (IROS)},
+  year =	 2020,
+  pages =	 { },
+  month =	 {Oct},
+  address =	 {Las Vegas, NV},
+  organization = {IEEE/RSJ}
+}
+
+@InProceedings{paz20:mapping,
+  author =	 {David Paz and Hengyuan Zhang and Qinru Li and Hao
+                  Xiang and Henrik I Christensen},
+  title =	 {Probabilistic Semantic Mapping for Urban Autonomous
+                  Driving Applications},
+  booktitle =	 {Internaitonal Conference on Intelligent Robots and
+                  Systems (IROS)},
+  year =	 2020,
+  pages =	 { },
+  month =	 {Oct},
+  address =	 {Las Vegas, NV},
+  organization = {IEEE/RSJ}
+}
+
