Recent CASE-2018 papers in TASE

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -89594,3 +89594,145 @@
   organization = {IEEE/RSJ}
 }
 
+@misc{dellaert2020shonan,
+  title =	 {Shonan Rotation Averaging: Global Optimality by
+                  Surfing $SO(p)^n$},
+  author =	 {Frank Dellaert and David M. Rosen and Jing Wu and
+                  Robert Mahony and Luca Carlone},
+  year =	 2020,
+  eprint =	 {2008.02737},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
+@inproceedings{trevor2013efficient,
+  title =	 {Efficient Organized Point Cloud Segmentation with
+                  Connected Components},
+  author =	 {Trevor, A and Gedikli, Suat and Rusu, R and
+                  Christensen, H},
+  booktitle =	 {3rd Workshop on Semantic Perception Mapping and
+                  Exploration (SPME), Karlsruhe, Germany},
+  year =	 2013
+}
+
+@inproceedings{holzer2012adaptive,
+  title =	 {Adaptive neighborhood selection for real-time
+                  surface normal estimation from organized point cloud
+                  data using integral images},
+  author =	 {Holzer, Stefan and Rusu, Radu Bogdan and Dixon, M
+                  and Gedikli, Suat and Navab, Nassir},
+  booktitle =	 {Intelligent Robots and Systems (IROS), 2012 IEEE/RSJ
+                  International Conference on},
+  pages =	 {2684--2689},
+  year =	 2012,
+  organization = {IEEE}
+}
+
+@Article{quiros20:iot,
+  author =	 {Quiros, G and Cao, D and Canedo, A.},
+  title =	 {Dispersed Automation for Internet of Things},
+  journal =	 {IEEE Trans on Automation Science and Engineering},
+  year =	 2020,
+  volume =	 17,
+  number =	 3,
+  pages =	 {1176--1181},
+  month =	 {July}
+}
+
+@article{thayer20:vineyards,
+  author =	 {Thayer, T.C. and Vougioukas, S. and Goldberg, K. and
+                  Carpin, S.},
+  title =	 {Multi-Robot Routing Algorithms for Robot Operating
+                  in Vineyards},
+  journal =	 {IEEE Trans on Automation Science and Engineering},
+  year =	 2020,
+  volume =	 17,
+  number =	 3,
+  pages =	 {1184--1194},
+  month =	 {July}
+}
+
+
+@article{pane20:_system_archit_cad_based,
+  author =	 {Pane, Y. and Arbo, M. H. and Aertbelein, E. and
+                  Decre, w},
+  title =	 {A System Architecture for {CAD}-Based robotics
+                  assembly with sensor-based skills},
+  journal =	 {IEEE Trans on Automation Science and Engineering},
+  year =	 2020,
+  volume =	 17,
+  number =	 3,
+  pages =	 {1237--1249},
+  month =	 {July}
+}
+
+@article{10.1126/science.aap8062,
+  author =	 {Brynjolfsson, Erik and Mitchell, Tom},
+  title =	 {{What can machine learning do? Workforce
+                  implications}},
+  issn =	 {0036-8075},
+  doi =		 {10.1126/science.aap8062},
+  pmid =	 29269459,
+  pages =	 {1530--1534},
+  number =	 6370,
+  volume =	 358,
+  journal =	 {Science},
+  year =	 2017
+}
+
+@article{10.1109/tase.2020.2991777,
+  author =	 {Hildebrandt, Constantin and Kocher, Aljosha and
+                  Kustner, Christof and Lopez-Enriquez, Carlos-Manuel
+                  and Muller, Andreas W and Caesar, Birte and
+                  Gundlach, Claas Steffen and Fay, Alexander},
+  title =	 {{Ontology Building for Cyber-Physical Systems:
+                  Application in the Manufacturing Domain}},
+  issn =	 {1545-5955},
+  doi =		 {10.1109/tase.2020.2991777},
+  pages =	 {1--17},
+  number =	 3,
+  volume =	 17,
+  journal =	 {IEEE Transactions on Automation Science and
+                  Engineering},
+  local-url =
+                  {file://localhost/Users/hic/Documents/Papers%20Library/Hildebrandt-Ontology%20Building%20for%20Cyber-Physical%20Systems-%20Application%20in%20the%20Manufacturing%20Domain-2020-IEEE%20Transactions%20on%20Automation%20Science%20and%20Engineering.pdf},
+  year =	 2020
+}
+
+@article{10.1109/tase.2019.2948200,
+  author =	 {Kim, Oanh Tran Thi and Tran, Nguyen H and Pham,
+                  Chuan and LeAnh, Tuan and Thai, My T and Hong,
+                  Choong Seon},
+  title =	 {{Parking Assignment: Minimizing Parking Expenses and
+                  Balancing Parking Demand Among Multiple Parking
+                  Lots}},
+  issn =	 {1545-5955},
+  doi =		 {10.1109/tase.2019.2948200},
+  pages =	 {1--12},
+  number =	 3,
+  volume =	 17,
+  journal =	 {IEEE Transactions on Automation Science and
+                  Engineering},
+  local-url =
+                  {file://localhost/Users/hic/Documents/Papers%20Library/Kim-Parking%20Assignment-%20Minimizing%20Parking%20Expenses%20and%20Balancing%20Parking%20Demand%20Among%20Multiple%20Parking%20Lots-2019-IEEE%20Transactions%20on%20Automation%20Science%20and%20Engineering.pdf},
+  year =	 2019
+}
+
+@article{10.1109/tase.2020.2967093,
+  author =	 {Oliff, Harley and Liu, Ying and Kumar, Maneesh and
+                  Williams, Michael},
+  title =	 {{Improving Human-Robot Interaction Utilizing
+                  Learning and Intelligence: A Human Factors-Based
+                  Approach}},
+  issn =	 {1545-5955},
+  doi =		 {10.1109/tase.2020.2967093},
+  pages =	 {1--14},
+  number =	 3,
+  volume =	 17,
+  journal =	 {IEEE Transactions on Automation Science and
+                  Engineering},
+  local-url =
+                  {file://localhost/Users/hic/Documents/Papers%20Library/Oliff-Improving%20Human-Robot%20Interaction%20Utilizing%20Learning%20and%20Intelligence-%20A%20Human%20Factors-Based%20Approach-2020-IEEE%20Transactions%20on%20Automation%20Science%20and%20Engineering.pdf},
+  year =	 2020
+}
+
