Recent PNAS paper on autonomics

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -89736,3 +89736,14 @@
   year =	 2020
 }
 
+@Article{harel20:_auton,
+  author = 	 {Harel, H and Marron, A and Sifakis, J},
+  title = 	 {Autonomics: In search of a foundation for next generation autonomous systems},
+  journal = 	 {Proceedings of the National Academy of Science (PNAS)},
+  year = 	 2020,
+  doi = {10.1073/pnas.2003162117},
+  volume = 	 117,
+  number = 	 30,
+  pages = 	 {17491--17498},
+  month = 	 {July}}
+
