Updated paper on trajectory prediction

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -89737,13 +89737,38 @@
 }
 
 @Article{harel20:_auton,
-  author = 	 {Harel, H and Marron, A and Sifakis, J},
-  title = 	 {Autonomics: In search of a foundation for next generation autonomous systems},
-  journal = 	 {Proceedings of the National Academy of Science (PNAS)},
-  year = 	 2020,
-  doi = {10.1073/pnas.2003162117},
-  volume = 	 117,
-  number = 	 30,
-  pages = 	 {17491--17498},
-  month = 	 {July}}
+  author =	 {Harel, H and Marron, A and Sifakis, J},
+  title =	 {Autonomics: In search of a foundation for next
+                  generation autonomous systems},
+  journal =	 {Proceedings of the National Academy of Science
+                  (PNAS)},
+  year =	 2020,
+  doi =		 {10.1073/pnas.2003162117},
+  volume =	 117,
+  number =	 30,
+  pages =	 {17491--17498},
+  month =	 {July}
+}
 
+@misc{zhou2020holicity,
+  title =	 {HoliCity: A City-Scale Data Platform for Learning
+                  Holistic 3D Structures},
+  author =	 {Yichao Zhou and Jingwei Huang and Xili Dai and
+                  Linjie Luo and Zhili Chen and Yi Ma},
+  year =	 2020,
+  eprint =	 {2008.03286},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+  }
+
+@misc{ivanovic2020mats,
+  title =	 {MATS: An Interpretable Trajectory Forecasting
+                  Representation for Planning and Control},
+  author =	 {Boris Ivanovic and Amine Elhafsi and Guy Rosman and
+                  Adrien Gaidon and Marco Pavone},
+  year =	 {2020},
+  eprint =	 {2009.07517},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO},
+  URL =		 {https://arxiv.org/abs/2009.07517}
+}
