- Managment update to fix syntax error

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -89430,7 +89430,7 @@
 	Address = {Brussels, Belgium},
 	Author = {Tang, Da and Li, Xiujun and Gao, Jianfeng and Wang, Chong and Li, Lihong and Jebara, Tony"},
 	Booktitle = {Proceedings of the 2018 Conference on Empirical Methods in Natural Language Processing},
-	Month = oct # {-} # nov,
+	Month = {oct # {-} # nov},
 	Pages = {2298--2309},
 	Publisher = {Association for Computational Linguistics},
 	Title = {Subgoal Discovery for Hierarchical Dialogue Policy Learning},
@@ -89694,8 +89694,7 @@
   volume =	 17,
   journal =	 {IEEE Transactions on Automation Science and
                   Engineering},
-  local-url =
-                  {file://localhost/Users/hic/Documents/Papers%20Library/Hildebrandt-Ontology%20Building%20for%20Cyber-Physical%20Systems-%20Application%20in%20the%20Manufacturing%20Domain-2020-IEEE%20Transactions%20on%20Automation%20Science%20and%20Engineering.pdf},
+  local-url = {file://localhost/Users/hic/Documents/Papers%20Library/Hildebrandt-Ontology%20Building%20for%20Cyber-Physical%20Systems-%20Application%20in%20the%20Manufacturing%20Domain-2020-IEEE%20Transactions%20on%20Automation%20Science%20and%20Engineering.pdf},
   year =	 2020
 }
 
@@ -89713,8 +89712,7 @@
   volume =	 17,
   journal =	 {IEEE Transactions on Automation Science and
                   Engineering},
-  local-url =
-                  {file://localhost/Users/hic/Documents/Papers%20Library/Kim-Parking%20Assignment-%20Minimizing%20Parking%20Expenses%20and%20Balancing%20Parking%20Demand%20Among%20Multiple%20Parking%20Lots-2019-IEEE%20Transactions%20on%20Automation%20Science%20and%20Engineering.pdf},
+  local-url = {file://localhost/Users/hic/Documents/Papers%20Library/Kim-Parking%20Assignment-%20Minimizing%20Parking%20Expenses%20and%20Balancing%20Parking%20Demand%20Among%20Multiple%20Parking%20Lots-2019-IEEE%20Transactions%20on%20Automation%20Science%20and%20Engineering.pdf},
   year =	 2019
 }
 
@@ -89731,8 +89729,7 @@
   volume =	 17,
   journal =	 {IEEE Transactions on Automation Science and
                   Engineering},
-  local-url =
-                  {file://localhost/Users/hic/Documents/Papers%20Library/Oliff-Improving%20Human-Robot%20Interaction%20Utilizing%20Learning%20and%20Intelligence-%20A%20Human%20Factors-Based%20Approach-2020-IEEE%20Transactions%20on%20Automation%20Science%20and%20Engineering.pdf},
+  local-url = {file://localhost/Users/hic/Documents/Papers%20Library/Oliff-Improving%20Human-Robot%20Interaction%20Utilizing%20Learning%20and%20Intelligence-%20A%20Human%20Factors-Based%20Approach-2020-IEEE%20Transactions%20on%20Automation%20Science%20and%20Engineering.pdf},
   year =	 2020
 }
 
@@ -89772,3 +89769,4 @@
   primaryClass = {cs.RO},
   URL =		 {https://arxiv.org/abs/2009.07517}
 }
+
