Added Best Cognitive Systems Paper

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -89770,3 +89770,15 @@
   URL =		 {https://arxiv.org/abs/2009.07517}
 }
 
+@InProceedings{zhen20:_seman_linkin_maps_activ_visual_searc,
+  author =	 {Z. Zhen and A. R{\"o}fer and O. C. Jenkins},
+  title =	 {Semantic Linking Maps for Active Visual Search},
+  booktitle =	 {Intl. Conf. of Robotics and Automation},
+  year =	 2020,
+  pages =	 { },
+  month =	 {June},
+  address =	 {Paris, France},
+  organization = {IEEE},
+  note =	 {Best Cognitive Paper}
+}
+
