IROS ... papers from CogRob

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -89782,3 +89782,57 @@
   note =	 {Best Cognitive Paper}
 }
 
+@InProceedings{paz20:metrics,
+  author =       {David Paz and Po-Jung Lai and Nathan Chan and Yuqing
+                  Jianf and Henrik I Christensen},
+  title =        {Autonomous Vehicle Benchmarking Using Unbiased
+                  Metrics},
+  booktitle =    {International Conference on Intelligent Robots and
+                  Systems (IROS)},
+  year =         2020,
+  pages =        { },
+  month =        {Oct},
+  address =      {Las Vegas, NV},
+  organization = {IEEE/RSJ}
+}
+
+@InProceedings{paz20:mapping,
+  author =       {David Paz and Hengyuan Zhang and Qinru Li and Hao
+                  Xiang and Henrik I Christensen},
+  title =        {Probabilistic Semantic Mapping for Urban Autonomous
+                  Driving Applications},
+  booktitle =    {International Conference on Intelligent Robots and
+                  Systems (IROS)},
+  year =         2020,
+  pages =        { },
+  month =        {Oct},
+  address =      {Las Vegas, NV},
+  organization = {IEEE/RSJ}
+}
+
+@InProceedings{pal20:lookin,
+  author =       {Anwesan Pal and Sayan Mondal and Henrik I
+                  Christensen},
+  title =        {``Looking at the right stuff'' - guided
+                  semantic-gaze for autonomous driving},
+  booktitle =    {Computer Vision and Pattern Recognition (CVPR)},
+  year =         2020,
+  pages =        { },
+  month =        {June},
+  address =      {Seattle, WA},
+  organization = {IEEE/PAMI}
+}
+
+@InProceedings{white19:BlackBlockRecorder,
+  author =       {Ruffin White and Gianluca Caiazza and Agostino
+                  Cortesi and Young Im Cho and Henrik I. Christensen},
+  title =        {Black Block Recorder: Immutable Black Box Logging
+                  for Robots via Blockchain },
+  booktitle =    {International Conference on Intelligent Robots and
+                  Systems},
+  year =         2019,
+  pages =        {1--8},
+  month =        {Oct},
+  address =      {Macau},
+  organization = {IEEE/RSJ}
+}
