Multi-agent game strategies (DCIST CDE B)

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -89566,19 +89566,6 @@
   year =	 {2019}
 }
 
-@InProceedings{paz20:metrics,
-  author =	 {David Paz and Po-Jung Lai and Nathan Chan and Yuqing
-                  Jianf and Henrik I Christensen},
-  title =	 {Autonomous Vehicle Benchmarking Using Unbiased
-                  Metrics},
-  booktitle =	 {Internaitonal Conference on Intelligent Robots and
-                  Systems (IROS)},
-  year =	 2020,
-  pages =	 { },
-  month =	 {Oct},
-  address =	 {Las Vegas, NV},
-  organization = {IEEE/RSJ}
-}
 
 @misc{dellaert2020shonan,
   title =	 {Shonan Rotation Averaging: Global Optimality by
@@ -89810,15 +89797,89 @@
 }
 
 @InProceedings{white19:BlackBlockRecorder,
-  author =       {Ruffin White and Gianluca Caiazza and Agostino
+  author =	 {Ruffin White and Gianluca Caiazza and Agostino
                   Cortesi and Young Im Cho and Henrik I. Christensen},
-  title =        {Black Block Recorder: Immutable Black Box Logging
+  title =	 {Black Block Recorder: Immutable Black Box Logging
                   for Robots via Blockchain },
-  booktitle =    {International Conference on Intelligent Robots and
+  booktitle =	 {International Conference on Intelligent Robots and
                   Systems},
-  year =         2019,
-  pages =        {1--8},
-  month =        {Oct},
-  address =      {Macau},
+  year =	 2019,
+  pages =	 {1--8},
+  month =	 {Oct},
+  address =	 {Macau},
   organization = {IEEE/RSJ}
+}
+  
+@article{agmon2011multi,
+  title =	 {Multi-robot adversarial patrolling: facing a
+                  full-knowledge opponent},
+  author =	 {Agmon, Noa and Kaminka, Gal A and Kraus, Sarit},
+  journal =	 {Journal of Artificial Intelligence Research},
+  volume =	 {42},
+  pages =	 {887--916},
+  year =	 {2011}
+}
+
+@inproceedings{oshrat2020adversarial,
+  title =	 {Adversarial Fence Patrolling: Non-Uniform Policies
+                  for Asymmetric Environments.},
+  author =	 {Oshrat, Yaniv and Agmon, Noa and Kraus, Sarit},
+  booktitle =	 {AAAI},
+  pages =	 {10377-10384},
+  year =	 2020,
+}
+
+@article{lin2019multi,
+  title =	 {Multi-robot adversarial patrolling: Handling
+                  sequential attacks},
+  author =	 {Lin, Efrat Sless and Agmon, Noa and Kraus, Sarit},
+  journal =	 {Artificial Intelligence},
+  volume =	 {274},
+  pages =	 {1--25},
+  year =	 {2019},
+  publisher =	 {Elsevier}
+  }
+
+@Inproceedings{8901097,
+  author =	 {E. {Hartuv} and N. {Agmon} and S. {Kraus}},
+  booktitle =	 {2019 International Symposium on Multi-Robot and
+                  Multi-Agent Systems (MRS)},
+  title =	 {Scheduling Spare Drones for Persistent Task
+                  Performance with Several Replacement Stations -
+                  EXTENDED ABSTRACT},
+  year =	 2019,
+  pages =	 {95-97},
+  month =	 {Aug},
+}
+
+@incollection{alon2019taking,
+  title =	 {Taking Turns in Complete Coverage for Multiple
+                  Robots},
+  author =	 {Alon, Lee-or and Agmon, Noa and Kaminka, Gal A},
+  booktitle =	 {Distributed Autonomous Robotic Systems},
+  pages =	 {401--412},
+  year =	 2019,
+  publisher =	 {Springer}
+}
+
+@inproceedings{sinayuav,
+  title =	 {UAV/UGV Search and Capture of Goal-oriented
+                  Uncertain Targets},
+  author =	 {Sinay, Mor and Agmon, Noa and Maksimov, Oleg and
+                  Levy, Guy and Bitan, Moshe and Kraus, Sarit},
+  booktitle =	 {IEEE/RSJ International Conference on Intelligent
+                  Robots and Systems (IROS)},
+  year =	 2018,
+  pages =	 {8505--8512}
+}
+
+@inproceedings{DBLP:conf/ijcai/BowlingV03,
+  author =	 {Michael H. Bowling and Manuela M. Veloso},
+  title =	 {Simultaneous Adversarial Multi-Robot Learning},
+  year =	 2003,
+  cdate =	 1041379200000,
+  pages =	 {699-704},
+  url =		 {http://ijcai.org/Proceedings/03/Papers/102.pdf},
+  booktitle =	 {IJCAI},
+  crossref =	 {conf/ijcai/2003}
 }
