update from game theory session

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -89601,6 +89601,7 @@
   organization = {IEEE}
 }
 
+
 @Article{quiros20:iot,
   author =	 {Quiros, G and Cao, D and Canedo, A.},
   title =	 {Dispersed Automation for Internet of Things},
@@ -89882,4 +89883,33 @@
   url =		 {http://ijcai.org/Proceedings/03/Papers/102.pdf},
   booktitle =	 {IJCAI},
   crossref =	 {conf/ijcai/2003}
+  }
+
+@InProceedings{basilico09:aamas,
+  author =	 {Nicola Basilico and Nicola Gatti and Francesco
+                  Amigoni},
+  title =	 {Leader-Following Strategies for Robotic Patrolling
+                  in Environments with Arbitrary Topologies},
+  booktitle =	 {8th Intl. Conf. Autonomous Agents and Multi-Agent
+                  Systems},
+  year =	 2009,
+  pages =	 {57--64},
+  month =	 {May},
+  address =	 {Budapest, Hungary}
 }
+
+@InProceedings{samvelyan19:neurips,
+  author =	 {Mikayel Samvelyan and Tabish Rashid amd Christian
+                  Schroeder de Witt and Gregory Farquhar and Nantas
+                  Nardelli and Tim G. J. Rudner and Chia-Man Hung and
+                  Philip H. S. Torr and Jakob Foerste},
+  title =	 {The StarCraft Multi-AGent Challenge},
+  booktitle =	 {Workshop on Deep Reinforcement Learning at the 33rd
+                  Conference on Neural Information Processing Systems
+                  (NeurIPS 2019),},
+  year =	 2019,
+  month =	 {December},
+  address =	 {Vancouver, Canada}
+}
+
+
