--- a/bib-file.bib
+++ b/bib-file.bib
@@ -89913,3 +89913,44 @@
 }
 
 
+@ARTICLE{zhang19:semanticslam,
+  author =	 {J. {Zhang} and M. {Gui} and Q. {Wang} and R. {Liu}
+                  and J. {Xu} and S. {Chen}},
+  journal =	 {IEEE Transactions on Visualization and Computer
+                  Graphics},
+  title =	 {Hierarchical Topic Model Based Object Association
+                  for Semantic SLAM},
+  year =	 2019,
+  volume =	 25,
+  number =	 11,
+  pages =	 {3052-3062},
+  doi =		 {10.1109/TVCG.2019.2932216}
+}
+
+@InProceedings{qui20:corl,
+  author =       {Y. Cassie Qui and Anwesan Pal and Henrik I
+                  Christensen},
+  title =        {Target Driven visual navigation exploiting object
+                  relationships},
+  booktitle =    {The Conference on Robotic Learning},
+  year =         2020,
+  pages =        { },
+  month =        {November},
+  address =      {Boston, MA}
+}
+
+@Article{marcus20:NextDecadeAI,
+  author =       {Gary Marcus},
+  title =        {The Next Decade in {AI}},
+  journal =      {arXiv},
+  year =         2020,
+  month =        {Feb},
+  note =         {2002-06177 / cs.AI}
+}
+
+@misc{roberts:2020,
+  author =       {Mike Roberts AND Nathan Paczan},
+  title =        {{Hypersim}: {A} Photorealistic Synthetic Dataset for
+                  Holistic Indoor Scene Understanding},
+  howpublished = {arXiv 2020},
+}
