--- a/bib-file.bib
+++ b/bib-file.bib
@@ -89954,3 +89954,179 @@
                   Holistic Indoor Scene Understanding},
   howpublished = {arXiv 2020},
 }
+
+@book{pml1Book,
+  author =       "Kevin P. Murphy",
+  title =        "Probabilistic Machine Learning: An introduction",
+  publisher =    "MIT Press",
+  year =         2021,
+  url =          "http://mlbayes.ai"
+}
+
+@Book{turner19:RobotRules,
+  author =       {Jacob Turner},
+  title =        {Robot Rules - Regulating Artificial Intelligence},
+  publisher =    {Palgrave Macmillan},
+  year =         2019,
+  address =      {London, UK},
+  annote =       {ISBN 978-3-319-96234-4}
+}
+
+
+@Book{jean-baptiste20:design0,
+  author =       {Annie Jean-Baptiste},
+  title =        {Building for Everyone},
+  publisher =    {John Wiley},
+  year =         2020,
+  address =      {New York, NY}
+}
+
+
+@Book{bahcall19:LoonShots,
+  author =       {Safi Bahcall},
+  title =        {Loonshots},
+  publisher =    {St. Martin's Press},
+  year =         2019,
+  address =      {New York, NY}
+}
+
+@article{SemanticsSurvey2021,
+  title =        {{Semantics for Robotic Mapping, Perception and
+                  Interaction: A Survey}},
+  author =       {Garg, Sourav and Sünderhauf, Niko and Dayoub, Feras
+                  and Morrison, Douglas and Cosgun, Akansel and
+                  Carneiro, Gustavo and Wu, Qi and Chin, Tat-Jun and
+                  Reid, Ian and Gould, Stephen and Corke, Peter and
+                  Milford, Michael},
+  journal =      {Foundations and Trends® in Robotics},
+  issn =         {1935-8253},
+  doi =          {10.1561/2300000059},
+  eprint =       {2101.00443},
+  url =          {https://arxiv.org/pdf/2101.00443.pdf},
+  abstract =     {{For robots to navigate and interact more richly
+                  with the world around them, they will likely require
+                  a deeper understanding of the world in which they
+                  operate. In robotics and related research fields,
+                  the study of understanding is often referred to as
+                  semantics, which dictateswhat does the world “mean”
+                  to a robot, and is strongly tied to the question
+                  ofhow to represent that meaning. With humans and
+                  robots increasingly operating in the same world, the
+                  prospects of human–robot interaction also
+                  bringsemantics and ontology of natural language into
+                  the picture. Driven by need, as well as by enablers
+                  like increasing availability of training data and
+                  computational resources, semantics is a rapidly
+                  growing research area in robotics. The field has
+                  received significant attention in the research
+                  literature to date, but most reviews and surveys
+                  have focused on particular aspects of the topic: the
+                  technical research issues regarding its use in
+                  specific robotic topics like mapping or
+                  segmentation, or its relevance to one particular
+                  application domain like autonomous driving. A new
+                  treatment is therefore required, and is also timely
+                  because so much relevant research has occurred since
+                  many of the key surveys were published. This survey
+                  therefore provides an overarching snapshot of where
+                  semantics in robotics stands today. We establish a
+                  taxonomy for semantics research in or relevant to
+                  robotics, split into four broad categories of
+                  activity, in which semantics are extracted, used, or
+                  both. Within these broad categories we survey dozens
+                  of major topics including fundamentals from the
+                  computer vision field and key robotics research
+                  areas utilizing semantics, including mapping,
+                  navigation and interaction with the world. The
+                  survey also covers key practical considerations,
+                  including enablers like increased data availability
+                  and improved computational hardware, and major
+                  application areas where semantics is or is likely to
+                  play a key role. In creating this survey, we hope to
+                  provide researchers across academia and industry
+                  with a comprehensive reference that helps facilitate
+                  future research in this exciting field.}},
+  journaltitle = {Trends and Foundations in Robotics},
+  pages =        {1--224},
+  number =       {1–2},
+  volume =       8,
+  year =         2021
+}
+
+@inproceedings{Kollmitz2020,
+  author =       {Kollmitz, Marina and Koller, Torsten and Boedecker,
+                  Joschka and Burgard, Wolfram},
+  title =        {{Learning Human-Aware Robot Navigation from Physical
+                  Interaction Via Inverse Reinforcement Learning}},
+  booktitle =    {IROS 2020},
+  year =         2020,
+  url =          {http://ras.papercept.net/images/temp/IROS/files/2061.pdf},
+  urldate =      {2021-01-11}
+}
+
+@inproceedings{10.1117/12.131632,
+  author =       {Adam Hoover and Dmitry B. Goldgof and Kevin W.
+                  Bowyer},
+  title =        {{Extracting known and inferred shape information
+                  from a single view}},
+  volume =       1828,
+  booktitle =    {Sensor Fusion V},
+  editor =       {Paul S. Schenker},
+  organization = {International Society for Optics and Photonics},
+  publisher =    {SPIE},
+  pages =        {2 -- 13},
+  year =         1992,
+  doi =          {10.1117/12.131632},
+  URL =          {https://doi.org/10.1117/12.131632}
+}
+
+@Article{OpenPosePAMI21,
+  author =       {Z. Cao and G. Hidalgo and T. Simon and S.E. Wei and
+                  Y. Sheikh},
+  title =        {{OpenPose: Real-time Multi-Person 2D Pose Estimation
+                  using Part Affinity Fields}},
+  journal =      {IEEE Trans on PAMI},
+  year =         2021,
+  volume =       43,
+  number =       1,
+  pages =        {157--171},
+  month =        {Jan}
+}
+
+@Article{TactileSurvey2020,
+  author =       {Q.Li and O. Kroemer and Z. Su and F. F. Biega and M.
+                  Kaboli and H. J. Ritter},
+  title =        {A Review of Tactile Informaiton: Perception and
+                  Action Through Touch},
+  journal =      {IEEE Trans on Robotics},
+  year =         2020,
+  volume =       36,
+  number =       6,
+  pages =        {1619--1634},
+  month =        {Dec}
+}
+
+@Article{fan20:_cpl_slam,
+  author =       {T. Fan and H. Wang and M. Rubenstein and T. Murphey},
+  title =        {{CPL-SLAM: Efficient and Certifiable Correct Planar
+                  Graph-Based SLAM using the Complex Number
+                  Representation}},
+  journal =      {IEEE Trans on Robotics},
+  year =         2020,
+  volume =       36,
+  number =       6,
+  pages =        {1719--1737},
+  month =        {Dec}
+}
+
+@Article{costante20:_uncer,
+  author =       {G. Costante and M. Mancini},
+  title =        {Uncertainty estimation for data-driven visual
+                  odometry},
+  journal =      {IEEE Trans on Robotics},
+  year =         2020,
+  volume =       36,
+  number =       6,
+  pages =        {1738-1757}
+}
+
